# tct-config-mischel

./: .gitignore  Certify.hs  DC.hs  Its.hs  RC.hs  README.md  stack.yaml  tct-its.hs  tct-jbc.hs  tct-trs.hs  tct3.cabal  trs.hs
tct-trs-comp15/: Certify.hs  DC.hs  Makefile  RC.hs  trs-sandbox-build.cabal  trs.hs
trs-competition15/: Certify.hs  RC.hs
