name:          tct3
version:       3.0.0
stability:     experimental
author:
  Martin Avanzini, Andreas Kochesser, Georg Moser, Michael Schaper, Maria Schett
maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
license:       BSD3
license-file:  LICENSE
category:      Program Analysis
synopsis:      A Complexity Framework for Term Rewrite Systems
description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving
  resource bounds for different formal systems.
build-type:    Simple
cabal-version: >= 1.8

flag recompile
  description: Disable recompile
  default:     True


executable tct-trs
  if flag(recompile)
    cpp-options:  -DNOTRECOMPILE
  main-is:
    tct-trs.hs
  build-depends:
    array              == 0.5.*,
    bytestring         >= 0.10.4 && < 0.10.7,
    containers         >= 0.5 && < 0.6,
    fgl                == 5.5.*,
    filepath           >= 1.3,
    mtl                >= 2.1 && <= 2.3,
    base               == 4.*,
    process            >= 1.1,
    temporary          == 1.2.0.*,

    term-rewriting     == 0.*,
    term-rewriting-xml == 0.1.0.*,

    slogic             == 0.*,
    tct-common         == 3.*,
    tct-core           == 3.*,
    tct-trs            == 3.*

  extensions:
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    GeneralizedNewtypeDeriving,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    MultiParamTypeClasses,
    TypeFamilies,
    TypeOperators

  ghc-options:
    -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

executable tct-its
  main-is: 
    tct-its.hs
  build-depends:
    containers       >= 0.5 && < 0.6,
    mtl              >= 2.1 && < 2.3,
    base             == 4.*,
    fgl              == 5.5.*,
    fgl-visualize    == 0.1.0.*,
    parsec           == 3.1.*,

    slogic           == 0.*,
    tct-common       == 3.*,
    tct-core         == 3.*,
    tct-its          == 3.*

  extensions: 
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses, 
    TypeFamilies,
    TypeOperators,
    OverlappingInstances

  ghc-options:
    -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

executable tct-jbc
  main-is: 
    tct-jbc.hs
  build-depends:
    containers     >= 0.5 && < 0.6,
    base           == 4.*,
    mtl            >= 2.1 && <= 2.3,

    term-rewriting == 0.2.*,
    jat            == 1.2.0.*,
    slogic         == 0.*,

    tct-core       == 3.*,
    tct-common     == 3.*,
    tct-its        == 3.*,
    tct-trs        == 3.*

  extensions: 
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    MultiParamTypeClasses,
    TypeOperators,
    TypeSynonymInstances

  ghc-options:
    -j -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
